@@ -318,7 +318,7 @@ object Form1: TForm1
     Height = 468
     Top = 38
     Width = 400
-    ActivePage = TabMonitor
+    ActivePage = tabOptions
     Align = alTop
     Anchors = [akTop, akLeft, akRight, akBottom]
     Font.CharSet = ANSI_CHARSET
@@ -327,7 +327,7 @@ object Form1: TForm1
     Font.Pitch = fpVariable
     Font.Quality = fqDraft
     ParentFont = False
-    TabIndex = 4
+    TabIndex = 3
     TabOrder = 0
     object TabWallet: TTabSheet
       Caption = 'Wallet'
@@ -1061,9 +1061,9 @@ object Form1: TForm1
         Height = 440
         Top = 0
         Width = 392
-        ActivePage = TabSheet5
+        ActivePage = TabOpt_Wallet
         Align = alClient
-        TabIndex = 3
+        TabIndex = 0
         TabOrder = 0
         object TabOpt_Wallet: TTabSheet
           Caption = 'Wallet'
@@ -1372,7 +1372,7 @@ object Form1: TForm1
           object Panel7: TPanel
             Left = 0
             Height = 28
-            Top = 304
+            Top = 327
             Width = 384
             Align = alTop
             AutoSize = True
@@ -1422,7 +1422,7 @@ object Form1: TForm1
             Left = 8
             Height = 19
             Hint = 'Run as unattended Masternode'
-            Top = 285
+            Top = 308
             Width = 376
             Align = alTop
             BorderSpacing.Left = 8
@@ -1432,6 +1432,18 @@ object Form1: TForm1
             ParentShowHint = False
             ShowHint = True
             TabOrder = 12
+          end
+          object CB_WO_RebuildTrx: TCheckBox
+            Left = 8
+            Height = 19
+            Top = 285
+            Width = 376
+            Align = alTop
+            BorderSpacing.Left = 8
+            BorderSpacing.Top = 4
+            Caption = 'Rebuild transactions'
+            OnChange = CB_WO_RebuildTrxChange
+            TabOrder = 13
           end
         end
         object TabNodeOptions: TTabSheet
